购物车删除项目

--- a/MIS/WebContent/css/Css.css
+++ b/MIS/WebContent/css/Css.css
@@ -4,7 +4,7 @@
       height:40px;
       margin:60px 0px;
       margin-bottom:0px;
-      background-color:MediumOrchid;
+      background-color:orange;
       color:white;
       border:1px solid black;
       text-align:left;
